Fixed a small bug

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <p>SIESGSTArena is the name of the CodeChef SIESGST Campus Chapter <br> and
         an online platform for conducting programming competitions.</p>
       <div class="header-buttons">
-        <a href="competition.html">Get Started</a>
+        <a href="competitions.html">Get Started</a>
       </div>
     </div>
   </section>
