--- a/competitions.html
+++ b/competitions.html
@@ -1,72 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Competitions</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
 
-    <!-- Bootstrap core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+  <title>Competitions</title>
 
-    <!-- Custom styles for this template -->
-    <link href="grid.css" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css">
 
-  </head>
+  <!-- Custom styles for this template -->
+  <link href="grid.css" rel="stylesheet">
 
-  <body>
-    <div class="container">
+</head>
 
-      <div class="page-header">
-        <h1>Competitions</h1>
-        <p class="lead">Check out some of the competitions organised by SIESGST Arena.</p>
-      </div>
+<body>
+  <div class="container">
 
-      <h3>SRM's</h3>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/SRM17">SRM-17</a></div>
-        <div class="col-md-6">Length = 3 hrs</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/SRM16">SRM-16</a></div>
-        <div class="col-md-6">Length = 3 hrs</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/SRM15">SRM-15</a></div>
-        <div class="col-md-6">Length = 3 hrs</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/SRM14">SRM-14</a></div>
-        <div class="col-md-6">Length = 3 hrs</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/SRM13">SRM-13</a></div>
-        <div class="col-md-6">Length = 3 hrs</div>
-      </div>
-      <h3>Other contests</h3>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/AUG18">August Queue</a></div>
-        <div class="col-md-6">Length = 2 days</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/SEPT18">September Queue</a></div>
-        <div class="col-md-6">Length = 2 days</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/GBYE20">Good bye batch 16-20</a></div>
-        <div class="col-md-6">Length = 2 days</div>
-      </div>
-      <div class="row">
-        <div class="col-md-6"><a href="http://arena.siesgst.ac.in/contest/AUG20">August Queue 2020</a></div>
-        <div class="col-md-6">Length = 2 days</div>
-      </div>
+    <div class="page-header">
+      <h1>Competitions</h1>
+      <p class="lead">Check out some of the competitions organised by SIESGST Arena.</p>
+    </div>
 
+    <h3>SRM's</h3>
+    <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Setter</th>
+          <th scope="col">Start</th>
+          <th scope="col">Length</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM17">Single Round Match #17</a></td>
+          <td>wasim,
+          Parth,
+          Karthik Sridhar</td>
+          <td>Friday, September 11, 2020 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM16">Single Round Match #16</a></td>
+          <td>Cibin Chandrasekhar,
+          Harsh Sanjay Agrawal</td>
+          <td>Sunday, March 29, 2020 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM15">Single Round Match #15</a></td>
+          <td>Aishwarya Velumani,
+          Prathamesh Gawas,
+          Vedant Narendra Bhamare</td>
+          <td>Sunday, March 15, 2020 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM14">Single Round Match #14</a></td>
+          <td>Shambhavi Sudarshan</td>
+          <td>Sunday, January 26, 2020 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM13">Single Round Match #13</a></td>
+          <td>Rahul SawantDesai</td>
+          <td>Sunday, January 12, 2020 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM12">Single Round Match #12</a></td>
+          <td>Aditya Parthasarthy</td>
+          <td>Sunday, September 15, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM11">Single Round Match #11</a></td>
+          <td>Mithil Kiran Poojary,
+          Surya Madhavan</td>
+          <td>Sunday, August 25, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM10">Single Round Match #10</a></td>
+          <td>Barath Suresh Nadar</td>
+          <td>Saturday, August 10, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM09">Single Round Match #09</a></td>
+          <td>Ninad Chavan,
+          Harsh Sanjay Agrawal,
+          Shambhavi Sudarsan</td>
+          <td>Sunday, March 03, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM08">Single Round Match #08</a></td>
+          <td>Barath Suresh Nadar,
+          Mithil Kiran Poojary</td>
+          <td>Sunday, February 03, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM07">Single Round Match #07</a></td>
+          <td>sanoop menon,
+          venkhatesh</td>
+          <td>Sunday, January 27, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM06">Single Round Match #06</a></td>
+          <td>Aditya Parthasarathy</td>
+          <td>Sunday, January 13, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM05">Single Round Match #05</a></td>
+          <td>Vipul Singh Raghuvanshi</td>
+          <td>Sunday, January 06, 2019 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM04">Single Round Match #04</a></td>
+          <td>Harsh Sanjay Agrawal,
+          Shambhavi Sudarsan</td>
+          <td>Saturday, September 29, 2018 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM03">Single Round Match #03</a></td>
+          <td>Swapnil Satish Shinde</td>
+          <td>Tuesday, September 11, 2018 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM02">Single Round Match #02</a></td>
+          <td>Pritam Negi</td>
+          <td>Saturday, August 18, 2018 7:00 PM</td>
+          <td>3 hours</td>
+        </tr>
+        <tr>
+          <td><a href="http://arena.siesgst.ac.in/contest/SRM01">Single Round Match #01</a></td>
+          <td>Mandar Milind Kotnis</td>
+          <td>Saturday, August 11, 2018 7:00 PM</td>
+          <td>a day</td>
+        </tr>
+      </tbody>
+    </table>
+    <h3>Other contests</h3>
+    <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Setter</th>
+          <th scope="col">Start</th>
+          <th scope="col">Length</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>September Queue 2020</td>
+          <td>Ninad Chavan,
+          Rahul Sawantdesai,
+          Shambhavi Sudarsan</td>
+          <td>Friday, September 11, 2020 7:00 PM</td>
+          <td>2 days</td>
+        </tr>
+        <tr>
+          <td>Good Bye Batch 16-20</td>
+          <td>Arvindraj Thangaraj,
+          Ashish Kedarisetti,
+          Chinmay Chandak,
+          sanoop menon,
+          Shantanu,
+          Sowmik Sunil,
+          venkhatesh</td>
+          <td>Friday, April 17, 2020 7:00 PM</td>
+          <td>2 days</td>
+        </tr>
+        <tr>
+          <td>Good Bye Batch 15-19</td>
+          <td>Kaustubh Badrike,
+          Omkar Prabhu,
+          Pritam Negi,
+          Sanket Bailmare,
+          Shridhar Ravi,
+          Vipul Singh Raghuvanshi</td>
+          <td>Saturday, March 30, 2019 9:00 PM</td>
+          <td>2 days</td>
+        </tr>
+      </tbody>
+    </table>
 
-    </div> 
-  </body>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
+</body>
+
 </html>
