Updated to use fetch api

--- a/competitions.html
+++ b/competitions.html
@@ -33,7 +33,7 @@
     </div>
 
     <h3>SRM's</h3>
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover" id="srmTable">
       <thead class="thead-dark">
         <tr>
           <th scope="col">Name</th>
@@ -42,124 +42,10 @@
           <th scope="col">Length</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM17">Single Round Match #17</a></td>
-          <td>wasim,
-          Parth,
-          Karthik Sridhar</td>
-          <td>Friday, September 11, 2020 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM16">Single Round Match #16</a></td>
-          <td>Cibin Chandrasekhar,
-          Harsh Sanjay Agrawal</td>
-          <td>Sunday, March 29, 2020 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM15">Single Round Match #15</a></td>
-          <td>Aishwarya Velumani,
-          Prathamesh Gawas,
-          Vedant Narendra Bhamare</td>
-          <td>Sunday, March 15, 2020 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM14">Single Round Match #14</a></td>
-          <td>Shambhavi Sudarshan</td>
-          <td>Sunday, January 26, 2020 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM13">Single Round Match #13</a></td>
-          <td>Rahul SawantDesai</td>
-          <td>Sunday, January 12, 2020 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM12">Single Round Match #12</a></td>
-          <td>Aditya Parthasarthy</td>
-          <td>Sunday, September 15, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM11">Single Round Match #11</a></td>
-          <td>Mithil Kiran Poojary,
-          Surya Madhavan</td>
-          <td>Sunday, August 25, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM10">Single Round Match #10</a></td>
-          <td>Barath Suresh Nadar</td>
-          <td>Saturday, August 10, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM09">Single Round Match #09</a></td>
-          <td>Ninad Chavan,
-          Harsh Sanjay Agrawal,
-          Shambhavi Sudarsan</td>
-          <td>Sunday, March 03, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM08">Single Round Match #08</a></td>
-          <td>Barath Suresh Nadar,
-          Mithil Kiran Poojary</td>
-          <td>Sunday, February 03, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM07">Single Round Match #07</a></td>
-          <td>sanoop menon,
-          venkhatesh</td>
-          <td>Sunday, January 27, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM06">Single Round Match #06</a></td>
-          <td>Aditya Parthasarathy</td>
-          <td>Sunday, January 13, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM05">Single Round Match #05</a></td>
-          <td>Vipul Singh Raghuvanshi</td>
-          <td>Sunday, January 06, 2019 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM04">Single Round Match #04</a></td>
-          <td>Harsh Sanjay Agrawal,
-          Shambhavi Sudarsan</td>
-          <td>Saturday, September 29, 2018 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM03">Single Round Match #03</a></td>
-          <td>Swapnil Satish Shinde</td>
-          <td>Tuesday, September 11, 2018 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM02">Single Round Match #02</a></td>
-          <td>Pritam Negi</td>
-          <td>Saturday, August 18, 2018 7:00 PM</td>
-          <td>3 hours</td>
-        </tr>
-        <tr>
-          <td><a href="http://arena.siesgst.ac.in/contest/SRM01">Single Round Match #01</a></td>
-          <td>Mandar Milind Kotnis</td>
-          <td>Saturday, August 11, 2018 7:00 PM</td>
-          <td>a day</td>
-        </tr>
-      </tbody>
+      <tbody></tbody>
     </table>
     <h3>Other contests</h3>
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover" id ="otherTable">
       <thead class="thead-dark">
         <tr>
           <th scope="col">Name</th>
@@ -169,37 +55,6 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>September Queue 2020</td>
-          <td>Ninad Chavan,
-          Rahul Sawantdesai,
-          Shambhavi Sudarsan</td>
-          <td>Friday, September 11, 2020 7:00 PM</td>
-          <td>2 days</td>
-        </tr>
-        <tr>
-          <td>Good Bye Batch 16-20</td>
-          <td>Arvindraj Thangaraj,
-          Ashish Kedarisetti,
-          Chinmay Chandak,
-          sanoop menon,
-          Shantanu,
-          Sowmik Sunil,
-          venkhatesh</td>
-          <td>Friday, April 17, 2020 7:00 PM</td>
-          <td>2 days</td>
-        </tr>
-        <tr>
-          <td>Good Bye Batch 15-19</td>
-          <td>Kaustubh Badrike,
-          Omkar Prabhu,
-          Pritam Negi,
-          Sanket Bailmare,
-          Shridhar Ravi,
-          Vipul Singh Raghuvanshi</td>
-          <td>Saturday, March 30, 2019 9:00 PM</td>
-          <td>2 days</td>
-        </tr>
       </tbody>
     </table>
 
@@ -212,6 +67,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
+  <script src="./fetchapi.js"></script>
+  
 </body>
 
 </html>
